--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -354,96 +354,105 @@ header .go-back i {
 @-webkit-keyframes rainbow {
     0%,
     100% {
-        background: rgba(156, 39, 176, 0.5);
-        background: linear-gradient(45deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
+        background: rgba(156, 39, 176, 0.75);
+        background: linear-gradient(45deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
     }
     16% {
-        background: rgba(186, 104, 200, 0.5);
-        background: linear-gradient(45deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
+        background: rgba(132, 13, 121, 0.75);
+        background: linear-gradient(45deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
     }
     32% {
-        background: rgba(206, 147, 216, 0.5);
-        background: linear-gradient(45deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
+        background: rgba(239, 83, 80, 0.75);
+        background: linear-gradient(45deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
     }
     48% {
-        background: rgba(229, 115, 115, 0.5);
-        background: linear-gradient(45deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
+        background: rgba(255, 87, 34, 0.75);
+        background: linear-gradient(45deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
     }
     64% {
-        background: rgba(255, 112, 66, 0.5);
-        background: linear-gradient(45deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
+        background: rgba(255, 160, 0, 0.75);
+        background: linear-gradient(45deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 112, 66, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
     }
     80% {
-        background: rgba(233, 30, 99, 0.5);
-        background: linear-gradient(45deg, rgba(233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
+        background: rgba(233, 30, 99, 0.75);
+        background: linear-gradient(45deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
     }
 }
 
 @keyframes rainbow {
     0%,
     100% {
-        background: rgba(156, 39, 176, 0.5);
-        background: linear-gradient(45deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.5) 0%, rgba(156, 39, 176, 0.4) 100%);
+        background: rgba(156, 39, 176, 0.75);
+        background: linear-gradient(45deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
     }
     16% {
-        background: rgba(186, 104, 200, 0.5);
-        background: linear-gradient(45deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(186, 104, 200, 0.5) 0%, rgba(186, 104, 200, 0.4) 100%);
+        background: rgba(132, 13, 121, 0.75);
+        background: linear-gradient(45deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
     }
     32% {
-        background: rgba(206, 147, 216, 0.5);
-        background: linear-gradient(45deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(206, 147, 216, 0.5) 0%, rgba(206, 147, 216, 0.4) 100%);
+        background: rgba(239, 83, 80, 0.75);
+        background: linear-gradient(45deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
     }
     48% {
-        background: rgba(229, 115, 115, 0.5);
-        background: linear-gradient(45deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(229, 115, 115, 0.5) 0%, rgba(229, 115, 115, 0.4) 100%);
+        background: rgba(255, 87, 34, 0.75);
+        background: linear-gradient(45deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
     }
     64% {
-        background: rgba(255, 112, 66, 0.5);
-        background: linear-gradient(45deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 112, 66, 0.5) 0%, rgba(255, 112, 66, 0.4) 100%);
+        background: rgba(255, 160, 0, 0.75);
+        background: linear-gradient(45deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 112, 66, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
     }
     80% {
-        background: rgba(233, 30, 99, 0.5);
-        background: linear-gradient(45deg, rgba(233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
-        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.5) 0%, rgba(233, 30, 99, 0.4) 100%);
+        background: rgba(233, 30, 99, 0.75);
+        background: linear-gradient(45deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
     }
 }
 
 .recommend {
-    margin-top: -80px;
+    margin-top: 20px;
+}
+
+.notice {
+    margin-top: -40px;
 }
 
 @media only screen and (min-width: 1418px) {
+    .notice {
+        margin-top: 30px;
+        padding: 0 0.75rem;
+    }
+
     .recommend {
-        margin-top: -80px;
+        margin-top: 20px;
         padding: 0 0.75rem;
     }
 }
 
 .recommend .card .card-content {
-    padding: 10px 40px;
+    padding: 20px 40px;
 }
 
 .recommend .row .col {
@@ -451,7 +460,7 @@ header .go-back i {
 }
 
 .recommend .title {
-    margin-top: 30px;
+    margin-top: 25px;
     margin-bottom: 25px;
     text-align: center;
     font-size: 1.8rem;
