--- a/layout/_partial/bg-cover.ejs
+++ b/layout/_partial/bg-cover.ejs
@@ -21,6 +21,11 @@
                 </div>
             </div>
         </div>
+        <% if (is_home()) { %>
+        <div class="cover-social-link">
+            <%- partial('_partial/social-link') %>
+        </div>
+        <% } %>
     </div>
 </div>
 
