--- a/layout/_partial/bg-cover.ejs
+++ b/layout/_partial/bg-cover.ejs
@@ -1,4 +1,4 @@
-<div class="bg-cover index-cover about-cover" style="background-image: url('/medias/cover.jpg')">
+<div class="bg-cover <% if (is_home() && page.current === 1) { %>index-cover<% } %> about-cover" style="background-image: url('/medias/cover.jpg')">
     <div class="container">
         <div class="row">
             <div class="col s10 offset-s1 m8 offset-m2 l8 offset-l2">
@@ -22,9 +22,7 @@
             </div>
         </div>
         <% if (is_home()) { %>
-        <div class="cover-social-link">
-            <%- partial('_partial/social-link') %>
-        </div>
+        <div class="cover-social-link"><%- partial('_partial/social-link') %></div>
         <% } %>
     </div>
 </div>
