完善TOC的样式修改

--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -48,8 +48,8 @@
     }
 
     .toc-widget .toc-title {
-        margin: 35px 0 15px -2px;
-        padding-left: 15px;
+        margin: 35px 0 15px 0;
+        padding-left: 17px;
         font-size: 1.5rem;
         font-weight: bold;
         line-height: 1.5rem;
@@ -61,7 +61,11 @@
     }
 
     #toc-content ol {
-        padding-left: 15px;
+        padding-left: 10px;
+    }
+
+    #toc-content ol li {
+        padding-left: 10px;
     }
 
     #toc-content .toc-link:hover {
@@ -72,7 +76,7 @@
 
     #toc-content .toc-link::before {
         background-color: #eaeaea;
-        max-height: 26px;
+        max-height: 25px;
     }
 
     #toc-content .is-active-link {
