--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -6,13 +6,6 @@
     }
 }
 
-/* 特例修改小屏幕下文章详情table样式*/
-@media only screen and (max-width: 533px) {
-    #articleContent table{
-        table-layout: fixed;
-    }
-}
-
 /*中等屏幕下(平板类)的样式*/
 @media only screen and (min-width: 600px) and (max-width: 992px) {
     .container {
@@ -769,6 +762,13 @@ article .article-tags .chip {
 /*文章详情样式*/
 #artDetail {
     margin-top: -60px;
+}
+
+/* 修改小屏幕下文章详情table样式. */
+@media only screen and (max-width: 550px) {
+    #articleContent table{
+        table-layout: fixed;
+    }
 }
 
 @media only screen and (min-width: 1418px) {
