--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -1,209 +1,209 @@
 <%- partial('_partial/bg-cover') %>
-    <style>
-        .friends-container {
-            margin-top: -60px;
+<style>
+    .friends-container {
+        margin-top: -100px;
+    }
+
+    .frind-ship img {
+        border-radius: 50%;
+    }
+
+    /* 一下是按钮样式 */
+
+    .frind-ship {
+        padding: 10px 20px;
+    }
+
+    .frind-ship .title {
+        display: flex;
+        align-items: center;
+    }
+
+    .frind-ship .title div {
+        color: #fff;
+        padding-left: 10px;
+    }
+
+    .frind-ship .title img {
+        width: 100px;
+        height: 100px;
+        flex-shrink: 0;
+    }
+
+    .frind-ship .title h1 {
+        line-height: 0.8rem;
+        padding-bottom: 16px;
+        border-bottom: 2px solid #fff;
+    }
+
+    .friend-button {
+        display: flex;
+        justify-content: center;
+        margin-bottom: -27px;
+    }
+
+    .friend-button a {
+        border-radius: 40px;
+    }
+
+    .friend-all .tag-post {
+        margin-bottom: 30px;
+    }
+
+    .button-caution {
+        background-color: #FF4351;
+        border-color: #FF4351;
+        color: #FFF;
+    }
+
+    .button {
+        font-weight: 300;
+        font-size: 16px;
+        font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        text-decoration: none;
+        text-align: center;
+        line-height: 40px;
+        height: 40px;
+        padding: 0 40px;
+        margin: 0;
+        display: inline-block;
+        appearance: none;
+        cursor: pointer;
+        border: none;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition-property: all;
+        transition-property: all;
+        -webkit-transition-duration: .3s;
+        transition-duration: .3s;
+    }
+
+    .title {
+        margin-bottom: 0rem !important;
+    }
+
+    .card {
+        margin: 3rem 0 1rem 0 !important;
+    }
+
+    .button-glow.button-caution {
+        -webkit-animation-name: glowing-caution;
+        animation-name: glowing-caution;
+    }
+
+    @-webkit-keyframes glowing-caution {
+        from {
+            -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
+            box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
         }
 
-        .frind-ship img {
-            border-radius: 50%;
+        50% {
+            -webkit-box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
+            box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
         }
 
+        to {
+            -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
+            box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
+        }
+    }
 
-        /* 一下是按钮样式 */
-
-        .frind-ship {
-            padding: 10px 20px;
+    @keyframes glowing-caution {
+        from {
+            -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
+            box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
         }
 
-        .frind-ship .title {
-            display: flex;
-            align-items: center;
+        50% {
+            -webkit-box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
+            box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
         }
 
-        .frind-ship .title div {
-            color: #fff;
-            padding-left: 10px;
+        to {
+            -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
+            box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
         }
+    }
 
-        .frind-ship .title img {
-            width: 100px;
-            height: 100px;
-            flex-shrink: 0;
-        }
+    .button-caution:hover {
+        background-color: #ff7680;
+        border-color: #ff7680;
+        color: #FFF;
+        text-decoration: none;
+    }
 
-        .frind-ship .title h1 {
-            line-height: 0.8rem;
-            padding-bottom: 16px;
-            border-bottom: 2px solid #fff
-        }
+    .frind-card1 {
+        background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    }
 
-        .friend-button {
-            display: flex;
-            justify-content: center;
-            margin-bottom: -27px;
-        }
+    .frind-card2 {
+        background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    }
 
-        .friend-button a {
-            border-radius: 40px;
-        }
+    .frind-card3 {
+        background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
+    }
 
-        .friend-all .tag-post {
-            margin-bottom: 30px;
-        }
+    .frind-card4 {
+        background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    }
 
-        .button-caution {
-            background-color: #FF4351;
-            border-color: #FF4351;
-            color: #FFF;
-        }
+    .frind-card5 {
+        background-image: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
+    }
 
-        .button {
-            font-weight: 300;
-            font-size: 16px;
-            font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-            text-decoration: none;
-            text-align: center;
-            line-height: 40px;
-            height: 40px;
-            padding: 0 40px;
-            margin: 0;
-            display: inline-block;
-            appearance: none;
-            cursor: pointer;
-            border: none;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            -webkit-transition-property: all;
-            transition-property: all;
-            -webkit-transition-duration: .3s;
-            transition-duration: .3s;
-        }
-        .title{
-            margin-bottom: 0rem !important;
-        }
-        .card{
-            margin: 3rem 0 1rem 0 !important;
-        }
+    .frind-card6 {
+        background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+    }
 
-        .button-glow.button-caution {
-            -webkit-animation-name: glowing-caution;
-            animation-name: glowing-caution;
-        }
+    .frind-card7 {
+        background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+    }
 
-        @-webkit-keyframes glowing-caution {
-            from {
-                -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-                box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-            }
-            50% {
-                -webkit-box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
-                box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
-            }
-            to {
-                -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-                box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-            }
-        }
+    .frind-card8 {
+        background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
+    }
 
-        @keyframes glowing-caution {
-            from {
-                -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-                box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-            }
-            50% {
-                -webkit-box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
-                box-shadow: 0 0 20px rgba(255, 67, 81, 0.8);
-            }
-            to {
-                -webkit-box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-                box-shadow: 0 0 0 rgba(255, 67, 81, 0.3);
-            }
-        }
+    .frind-card9 {
+        background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
+    }
 
-        .button-caution:hover {
-            background-color: #ff7680;
-            border-color: #ff7680;
-            color: #FFF;
-        }
+    .frind-card10 {
+        background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+    }
+</style>
 
-        .frind-card1 {
-            background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-        }
-
-        .frind-card2 {
-            background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .frind-card3 {
-            background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
-        }
-
-        .frind-card4 {
-            background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-        }
-
-        .frind-card5 {
-            background-image: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
-        }
-
-        .frind-card6 {
-            background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
-        }
-
-        .frind-card7 {
-            background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
-        }
-
-        .frind-card8 {
-            background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
-        }
-
-        .frind-card9 {
-            background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
-        }
-
-        .frind-card10 {
-            background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-        }
-
-        .frind-card10 {
-            background-image: linear-gradient(-225deg, #473B7B 0%, #3584A7 51%, #30D2BE 100%);
-        }
-
-        .frind-card11 {
-            background-image: linear-gradient(to right, #243949 0%, #517fa4 100%);
-        }
-
-        .frind-card12 {
-            background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
-        }
-    </style>
-    <main class="content">
-
-
-
-        <div class="container friends-container">
-            <article>
-                <div class="row tags-posts friend-all">
-                        <% for (var item in site.data.friends.friends){ %>
-                    <div class=" col s12 m6 l4">
-                        <div class="card frind-card<%=((item % 10) +1) %>">
-                            <div class="frind-ship">
-                                <div class="title">
-                                    <img src="<%=site.data.friends.friends[item].headSculpture %>" alt="img">
-                                    <div>
-                                        <h1 class="friend-name"><%=site.data.friends.friends[item].name %></h1>
-                                        <p><%=site.data.friends.friends[item].introduction %></p>
-                                    </div>
+<main class="content">
+    <div class="container friends-container">
+        <article>
+            <% if (site.data && site.data.friends) { %>
+            <% var friends = site.data.friends; %>
+            <div class="row tags-posts friend-all">
+                <% for (var i = 0, len = friends.length; i < len; i++) { %>
+                <% var friend = friends[i]; %>
+                <div class=" col s12 m6 l4" data-aos="zoom-in-up">
+                    <div class="card frind-card<%- ((i % 10) +1) %>">
+                        <div class="frind-ship">
+                            <div class="title">
+                                <img src="<%- friend.avatar %>" alt="img">
+                                <div>
+                                    <h1 class="friend-name"><%- friend.name %></h1>
+                                    <p><%- friend.introduction %></p>
                                 </div>
-                                <div class="friend-button">
-                                    <a href="<%=site.data.friends.friends[item].href %>" target="_blank" class="button button-glow button-rounded button-caution"><%=site.data.friends.friends[item].hrefTitle %></a>
-                                </div>
+                            </div>
+                            <div class="friend-button">
+                                <a href="<%- friend.url %>" target="_blank" 
+                                    class="button button-glow button-rounded button-caution">
+                                    <%- friend.title %>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <% } %>
                 </div>
-            </article>
-    </main>
+                <% } %>
+            </div>
+            <% } %>
+        </article>
+    </div>
+</main>
