--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,9 +1,15 @@
+<% if (theme.statistics && theme.statistics.enable) { %>
+	<script async src="/libs/busuanzi/busuanzi.pure.mini.js"></script>
+<% } %>
 <footer class="page-footer bg-color">
     <div class="container row center-align">
         <div class="col s12 m8 l8 copy-right">
             本站由&copy;<a href="https://blinkfox.github.io/" target="_blank">Blinkfox</a>基于
             <a href="https://hexo.io/" target="_blank">Hexo</a> 采用
             <a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">hexo-theme-matery</a>的主题搭建.
+			<% if (theme.statistics && theme.statistics.enable) { %>
+				<span id="busuanzi_container_site_uv"> 本站访客数<a id="busuanzi_value_site_uv"></a>人次</span>
+			<% } %>
         </div>
         <div class="col s12 m4 l4 social-link"><%- partial('_partial/social-link') %></div>
     </div>
