--- a/layout/_partial/post-detail.ejs
+++ b/layout/_partial/post-detail.ejs
@@ -12,7 +12,9 @@
             </div>
             <% } %>
             <div class="post-info">
-                <span class="post-cate" style="margin-right: 0px">
+                <% if (page.categories && page.categories.length > 0) { %>
+                <span class="post-cate">
+                <!--<span class="post-cate" style="margin-right: 0px">-->
                     <i class="fa fa-bookmark fa-fw icon-category"></i>
                     <% page.categories.forEach(category => { %>
                     <a href="<%- url_for(category.path) %>" class="post-category" target="_blank">
@@ -26,8 +28,9 @@
                     <i class="fa fa-clock-o fa-fw"></i><%- date(page.date, 'YYYY-MM-DD') %>
                 </span>
 				
-				<% if (theme.statistics && theme.statistics.enable) { %>
-					<span id="busuanzi_container_page_pv">阅读&nbsp<span id="busuanzi_value_page_pv"></span>
+				<% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
+                    <span id="busuanzi_container_page_pv" class="post-read">
+                    <i class="fa fa-eye fa-fw"></i><%= __('read') %> <span id="busuanzi_value_page_pv"></span>
 				<% } %>
             </div>
         </div>
