--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -784,22 +784,22 @@ article .article-tags .chip {
     0 2px 5px -5px rgba(0, 0, 0, .1) !important;
 }
 
+#artDetail .tag-cate {
+    padding-bottom: 15px;
+}
+
 #artDetail a {
     margin-right: 0 !important;
     text-transform: none !important;
 }
 
 #artDetail .article-info {
-    padding: 25px 48px 30px 50px;
-    margin-bottom: 20px;
+    padding: 20px 30px 1px 40px;
+    margin-bottom: -5px;
 }
 
 #artDetail .article-tag {
     float: left;
-}
-
-#artDetail .post-info {
-    float: right;
 }
 
 #artDetail .article-tag .chip {
@@ -813,8 +813,18 @@ article .article-tags .chip {
     margin-bottom: 2px;
 }
 
-#artDetail .post-info .post-cate {
-    margin-right: 15px;
+#artDetail .post-cate {
+    float: right;
+    color: #42b983;
+}
+
+#artDetail .post-cate a {
+    padding-right: 5px;
+    color: #42b983;
+    font-weight: 500;
+}
+
+#artDetail .post-info {
     color: #525f7f;
 }
 
@@ -833,6 +843,10 @@ article .article-tags .chip {
     color: #525f7f;
 }
 
+#artDetail .post-info .post-word-count {
+    margin-left: 15px;
+}
+
 #artDetail .post-info .post-read {
     margin-left: 15px;
     color: #525f7f;
@@ -844,8 +858,8 @@ article .article-tags .chip {
 
 @media only screen and (max-width: 601px) {
     #artDetail .article-info {
-        padding: 25px 15px 30px 18px;
-        margin-bottom: 20px;
+        padding: 15px 15px 1px 15px;
+        margin-bottom: -5px;
     }
 }
 
@@ -855,8 +869,8 @@ article .article-tags .chip {
     }
 
     #artDetail .article-info {
-        padding: 25px 30px 30px 32px;
-        margin-bottom: 20px;
+        padding: 15px 20px 0px 28px;
+        margin-bottom: -5px;
     }
 }
 
