--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -12,9 +12,14 @@
                     本站总访问量 <span id="busuanzi_value_site_pv" style="color: #fff;"></span> 次,&nbsp;
                 </span>
 				<span id="busuanzi_container_site_uv">
-                    访客数 <span id="busuanzi_value_site_uv" style="color: #fff;"></span> 人.
+                    访客数 <span id="busuanzi_value_site_uv" style="color: #fff;"></span> 人
                 </span>
 			<% } %>
+
+            <% if (theme.wordCount.enable && theme.wordCount.totalCount) { %>
+                ,&nbsp;&nbsp;<span>站点总字数:&nbsp;&nbsp;<%= totalcount(site) %></span>
+            <% } %>
+            .
         </div>
         <div class="col s12 m4 l4 social-link <%- socialClass %>"><%- partial('_partial/social-link') %></div>
     </div>
