--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,20 +5,20 @@
             <a href="https://hexo.io/" target="_blank">Hexo</a> 的
             <a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">hexo-theme-matery</a>主题搭建.
 
+            <% if (theme.wordCount.enable && theme.wordCount.totalCount) { %>
+                &nbsp;站点总字数:&nbsp;&nbsp;<span class="white-color"><%= totalcount(site) %></span>
+            <% } %>
+
             <% let socialClass = '' %>
 			<% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
                 <% socialClass = 'social-statis' %><br>
                 <span id="busuanzi_container_site_pv">
-                    本站总访问量 <span id="busuanzi_value_site_pv" style="color: #fff;"></span> 次,&nbsp;
+                    本站总访问量 <span id="busuanzi_value_site_pv" class="white-color"></span> 次,&nbsp;
                 </span>
 				<span id="busuanzi_container_site_uv">
-                    访客数 <span id="busuanzi_value_site_uv" style="color: #fff;"></span> 人
+                    访客数 <span id="busuanzi_value_site_uv" class="white-color"></span> 人
                 </span>
 			<% } %>
-
-            <% if (theme.wordCount.enable && theme.wordCount.totalCount) { %>
-                ,&nbsp;&nbsp;<span>站点总字数:&nbsp;&nbsp;<%= totalcount(site) %></span>
-            <% } %>
             .
         </div>
         <div class="col s12 m4 l4 social-link <%- socialClass %>"><%- partial('_partial/social-link') %></div>
