修改细节样式

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -218,7 +218,7 @@ header .brand-logo .logo-img {
 }
 
 header .brand-logo .logo-span {
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 header .button-collapse i {
@@ -604,7 +604,7 @@ header .go-back i {
     height: 65px;
     max-height: 65px;
     font-size: 14px;
-    color: hsla(0, 0%, 100%, .7) !important;
+    color: hsla(0, 0%, 100%, .78) !important;
 }
 
 .recommend .post-card .read-more {
@@ -826,6 +826,10 @@ article .article-tags .chip {
     padding-right: 5px;
     color: #42b983;
     font-weight: 500;
+}
+
+#artDetail .post-cate a:hover {
+    text-decoration: underline;
 }
 
 #artDetail .post-info {
@@ -1555,7 +1559,7 @@ footer a {
 }
 
 footer .copy-right {
-    color: #d9d9d9;
+    color: #dbdbdb;
 }
 
 /*搜索层样式*/
